Update Exception handle with message .